<resources>
    <string name="app_name">Wormy</string>
    <string name="version">Версия 2.5</string>
    <string name="player">Игрок!</string>
    <string name="ofsite">Официальный сайт</string>
    <string name="siteadress">katedukhnay.wix.com/wormy</string>
    <string name="myachivs">Автор, художник, оформитель:</string>
    <string name="notifcheck">напоминать обо мне</string>
    <string name="hallo">Добро пожаловать, </string>
    <string name="me">Екатерина Духнай</string>
    <string name="tanya">Создатель коллекции одноименных костюмов - талантливая художница BanyaBell</string>
    <string name="tanyaadress">vk.com/banyabell</string>
    <string name="lida">Благодарность выражается Лидии Ковалевой</string>
    <string name="lidaadress">kovli.deviantart.com</string>
    <string name="listtitle">This is Title</string>
    <string name="listdescription">This is Description</string>
    <string name="addname">Впиши свое имя здесь :)</string>
    <string name="shack">Богатства ждут!</string>
    <string name="hpage1">Добро пожаловать в игру! Здесь ты
        сможешь беззаботно
        провести время,
        ухаживая
        за милым червячком,
        как за настоящим
        домашним
        питомцем.</string>
    <string name="hpage2">Перемещаться по игре ты можешь с помощью
        стрелочек, находящихся у левой и правой стенок комнат (а также выходить через дверь во дворик и
        выходить с него с
        помощью стрелки вниз,
        находящейся у нижней панели твоего мобильного
        устройства).</string>
    <string name="hpage3">Как и любому домашнему
        животному, червячку нужно кушать, играть, а также спать и следить за собственной
        чистотой. В верхней части экрана ты можешь видеть, что сейчас
        необходимо твоему червячку:
        - покушать (оранжевый
        индикатор с морковкой);
        - искупаться/поспать (синий
        индикатор с жидким мылом);
        - поиграть(зеленый индикатор с  телевизором).</string>
    <string name="hpage4">Для того чтобы покормить
        червячка, нужно зайти на кухню, нажать на холодильник  и в нижней части экрана с
        помощью появившихся
        стрелок выбрать еду, а затем пальцем перенести ее к
        червячку, чтобы он ее съел.
        По отпускании пальца с твоего
        баланса снимутся вормики,
        необходимые для покупки
        выбранного продукта.</string>
    <string name="hpage5">Домашнего питомца нужно обязательно
        содержать в чистоте, не так ли? Поэтому води его чистить зубы и в туалет, а также
        отправляй  спать, ведь отдых нужен всем.</string>
    <string name="hpage6">Все питомцы любят играть, и твой - не
        исключение. В этой
        ситуации тебе
        поможет игровая
        комната. Используй разные игрушки, чтобы твоему червячку не было скучно.</string>
    <string name="hpage7">В правом верхнем углу экрана находится желтый
        индикатор со звездочкой и цифрой, означающей, на каком ты сейчас игровом уровне.
        Для того, чтобы повысить свой уровень, чаще бывай с червячком, играй с ним и не забывай ухаживать, а иначе он может заболеть.</string>
    <string name="hpage8">В левом верхнем углу экрана
        находится панель, на которой
        отображается твой баланс, то есть то
        количество вормиков
        (игровых монеток),
        которые ты можешь
        потратить на еду и одежду для червячка. Заработать их можно при взаимодействии с
        различными предметами. Но помни, что за один день ты можешь заработать не более 100 вормиков!</string>
    <string name="hpage9">В начале игры тебе доступен только один костюм,
        остальные же можно купить. Для этого каждый день
        ухаживай за червячком - так на твой баланс будут
        начисляться вормики.
        Накопив нужную сумму, смело иди в примерочную за новым
        костюмчиком - так ты не только поднимешь питомцу
        настроение, но и получишь игровые очки.</string>
    <string name="percent">0%</string>
    <string name="loading">Загрузка...</string>
    <string name="MainMenu">Главное меню</string>
    <string name="lobby">Прихожая</string>
    <string name="kitchen">Кухня</string>
    <string name="bathroom">Ванная</string>
    <string name="bedroom">Спальня</string>
    <string name="gameroom">Игровая</string>
    <string name="street">Дворик</string>
    <string name="weardrobe">Гардеробная</string>
    <string name="computerroom">Кабинет</string>
    <string name="help">Помощь</string>
    <string name="item_mainmenu">Главное меню</string>
    <string name="lines">Линии</string>
    <string name="dressing">Примерочная</string>
    <string name="victorine">Викторина</string>
    <string name="about">О программе</string>
    <string name="achivs">Достижения</string>
    <string name="obuchenie">Обучение</string>
    <string name="answ">Впиши ответ сюда</string>
    <string name="urgood">Молодец, продолжай в том же духе!</string>
    <string name="urnotgood">Неплохо!</string>
    <string name="urbad">Ты можешь лучше!</string>
    <string name="right">Правильно!</string>
    <string name="notright">Неправильно!</string>
    <string name="newlevel">Ты перешел на новый уровень!</string>
    <string name="twolevel">Ты достиг второго уровня! Подарок - 200 вормиков и 150 игровых очков!</string>
    <string name="threelevel">Ты достиг третьего уровня! Подарок - 250 вормиков и 200 игровых очков!</string>
    <string name="fourlevel">Ты достиг четвертого уровня! Подарок - 300 вормиков и 250 игровых очков!</string>
    <string name="fivelevel">Ты достиг пятого уровня! Подарок - 350 вормиков и 300 игровых очков!</string>
    <string name="sixlevel">Ты достиг шестого уровня! Подарок - 400 вормиков и 350 игровых очков!</string>
    <string name="sevenlevel">Ты достиг седьмого уровня! Подарок - 450 вормиков и 400 игровых очков!</string>
    <string name="eightlevel">Ты достиг восьмого уровня! Подарок - 500 вормиков и 450 игровых очков!</string>
    <string name="ninelevel">Ты достиг девятого уровня! Подарок - 550 вормиков и 500 игровых очков!</string>
    <string name="tenlevel">Ты достиг десятого уровня! Подарок - 600 вормиков и 550 игровых очков!</string>
    <string name="getcongrats">Принять поздравления!</string>
    <string name="safe">Сейф!</string>
    <string name="ready">Готово!</string>
    <string name="russiant">Стандартная</string>
    <string name="girly">Для девочек</string>
    <string name="boyly">Для мальчиков</string>
    <string name="vk_app_id">4899887</string>
    <string name="ok_app_id">1136507904</string>
    <string name="ok_public_key">CBANLOLEEBABABABA</string>
    <string name="ok_secret_key">06243504F5E93A2829153429</string>
    <string name="jan">января</string>
    <string name="feb">февраля</string>
    <string name="mar">марта</string>
    <string name="apr">апреля</string>
    <string name="may">мая</string>
    <string name="june">июня</string>
    <string name="july">июля</string>
    <string name="aug">августа</string>
    <string name="sept">сентября</string>
    <string name="oct">октября</string>
    <string name="nov">ноября</string>
    <string name="dec">декабря</string>
    <string name="s">Зайди в раздел Достижения, чтобы получить награду!</string>
    <string name="t">Новое достижение!</string>
    <string name="t2">Открыто новое достижение!</string>
    <string name="tf">Твой червячок проголодался!</string>
    <string name="th">Твой червячок испачкался и устал!</string>
    <string name="tm">Твоему червячку грустно!</string>
    <string name="tl">Червячок соскучился по тебе!</string>
    <string name="s1">Скорее покорми своего питомца!</string>
    <string name="s2">Поухаживай пожалуйста за питомцем, он не хочет болеть!</string>
    <string name="s3">Твой питомец грустит, поиграй с ним!</string>
    <string name="s4">Ты теперь "Мастер Линий"!</string>
    <string name="s5">Ты теперь "Чистюля"!</string>
    <string name="s6">Ты теперь "Мастер чистоты"!</string>
    <string name="s7">Ты теперь "Начальник-умывальник"!</string>
    <string name="s8">Ты теперь "Повар"!</string>
    <string name="s9">Ты теперь "Гурман"!</string>
    <string name="s10">Ты теперь "Объедало"!</string>
    <string name="s11">Ты теперь "Весельчак"!</string>
    <string name="s12">Ты теперь "Юный клоун"!</string>
    <string name="s13">Ты теперь "Мастер развлечений"!</string>
    <string name="s14">Ты теперь "Модник"!</string>
    <string name="s15">Первая встреча</string>
    <string name="s16">Твой первый заход в игру - очень важное событие в моей жизни!</string>
    <string name="s17">Мастер "Линий"</string>
    <string name="s18">Ты набрал в игре "Линии" более 200 очков, разве это не здорово?</string>
    <string name="s19">Чистюля</string>
    <string name="s20">Ты уже 50 раз позаботился о моем здоровье!</string>
    <string name="s21">Мастер чистоты</string>
    <string name="s22">Ты уже 100 раз позаботился о моем здоровье!</string>
    <string name="s23">Начальник-умывальник</string>
    <string name="s24">Ты уже 250 раз позаботился о моем здоровье!</string>
    <string name="s25">Повар</string>
    <string name="s26">Ты уже 50 раз покормил меня!</string>
    <string name="s27">Гурман</string>
    <string name="s28">Ты уже 100 раз покормил меня!</string>
    <string name="s29">Объедало</string>
    <string name="s30">Ты уже 250 раз покормил меня!</string>
    <string name="s31">Весельчак</string>
    <string name="s32">Ты уже 50 раз поиграл со мной!</string>
    <string name="s33">"Юный клоун"</string>
    <string name="s34">Ты уже 100 раз поиграл со мной!</string>
    <string name="s35">Мастер развлечений</string>
    <string name="s36">Ты уже 250 раз поиграл со мной!</string>
    <string name="s37">2 уровень</string>
    <string name="s38">Ты достиг 2 уровня!</string>
    <string name="s39">3 уровень</string>
    <string name="s40">Ты достиг 3 уровня!</string>
    <string name="s41">4 уровень</string>
    <string name="s42">Ты достиг 4 уровня!</string>
    <string name="s43">"5 уровень"</string>
    <string name="s44">Ты достиг 5 уровня!</string>
    <string name="s45">"6 уровень"</string>
    <string name="s46">Ты достиг 6 уровня!</string>
    <string name="s47">7 уровень</string>
    <string name="s48">Ты достиг 7 уровня!</string>
    <string name="s49">8 уровень</string>
    <string name="s50">Ты достиг 8 уровня!</string>
    <string name="s51">9 уровень</string>
    <string name="s52">Ты достиг 9 уровня!</string>
    <string name="s53">10 уровень</string>
    <string name="s54">Ты достиг 10 уровня!</string>
    <string name="s55">Модник</string>
    <string name="s56">Ты купил мне 10 костюмов!</string>
    <string name="s57">10 заходов в игру</string>
    <string name="s58">Ты уже 10 раз заходил в игру!</string>
   <string name="s59">25 заходов в игру</string>
    <string name="s60">Ты уже 25 раз заходил в игру!</string>
     <string name="s61">50 заходов в игру</string>
    <string name="s62">Ты уже 50 раз заходил в игру!</string>
     <string name="s63">100 заходов в игру</string>
    <string name="s64">Ты уже 100 раз заходил в игру!</string>
     <string name="s65">150 заходов в игру</string>
    <string name="s66">Ты уже 150 раз заходил в игру!</string>
     <string name="s67">200 заходов в игру</string>
    <string name="s68">Ты уже 200 раз заходил в игру!</string>
     <string name="s69">250 заходов в игру</string>
    <string name="s70">Ты уже 250 раз заходил в игру!</string>
     <string name="s71">300 заходов в игру</string>
    <string name="s72">Ты уже 300 раз заходил в игру!</string>
    <string name="s73">Тебе начислено </string>
    <string name="s74"> вормиков и </string>
     <string name="s75"> баллов.</string>
    <string name="s76">Ты еще не открыл это достижение!</string>
     <string name="s77">Ты уже получил приз за это достижение!</string>
    <string name="s78">Это ванная комната. Здесь можно почистить мне зубы и сводить в туалет.</string>
</resources>